# deephaven-bidi-test-plugin

./: README.md  setup.cfg
src/deephaven/plugin/test/: __init__.py  plugin.py
