[metadata]
name = deephaven-plugin-test
description = Deephaven test plugin to demonstrate bidirectional communication
version = 0.1.0
platforms = any

[options]
package_dir=
    =src
packages=find_namespace:
install_requires =
    deephaven-plugin
include_package_data = True

[options.packages.find]
where=src

[options.entry_points]
deephaven.plugin =
    registration_cls = deephaven.plugin.test:PluginRegistration
